# P04_ResNet_Wafer_Map_Classifier

./: .env.example  .gitignore  BACKEND_COMPLETE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_DEPLOYMENT.md  LICENSE  MANUAL_TASKS.md  PRD.md  PROGRESS.md  README_GITHUB.md  README_ORIGINAL.md  config.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/backend/: active_learning_service.py  annotation_service.py  auth.py  inference_service.py  main.py  training_service.py
src/database/: database.py  models.py  schema.sql
src/models/: __init__.py  losses.py  metrics.py  onnx_inference.py  resnet_unet.py
src/training/: active_learning.py  data_loader.py  trainer.py
